--- a/index.html
+++ b/index.html
@@ -326,8 +326,10 @@
 		});
 	</script>
 
-	<script src="./js/Validation.js"></script>
-	<script src="/js/nhanvien.js"></script>
+
+	<script src="/js/infoNhanVien.js"></script>
+	<script src="/js/danhSachNhanVien.js"></script>
+	<script src="/js/main.js"></script>
 </body>
 
 </html>
