--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
 								</div>
 								<select class="form-control" id="chucvu">
-									<option value="0">Chọn chức vụ</option>
+									<option selected disabled hidden value="Pick">Chọn chức vụ</option>
 									<option value="Sếp">Sếp</option>
 									<option value="Trưởng phòng">Trưởng phòng</option>
 									<option value="Nhân viên">Nhân viên</option>
@@ -329,6 +329,7 @@
 
 	<script src="/js/infoNhanVien.js"></script>
 	<script src="/js/danhSachNhanVien.js"></script>
+	<script src="/js/checkValidation.js"></script>
 	<script src="/js/main.js"></script>
 </body>
 
