--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
 		</div>
 	</div>
 
+	<!-- The Modal -->
+	<div class="modal fade" id="editModal">
+
+	</div>
+
 	<!-- Bootstrap -->
 	<script src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.min.js"></script>
